feat: define req/res cookies in FrourioSpec
